--- a/src/assets/styles/product.scss
+++ b/src/assets/styles/product.scss
@@ -83,3 +83,17 @@
     margin-top: auto;
   }
 }
+
+
+@media screen and (max-width: 992px) {
+  .product-list__item {
+    flex: 1 0 50%;
+    max-width: 50%;
+  }
+}
+@media screen and (max-width: 650px) {
+  .product-list__item {
+    flex: 1 0 100%;
+    max-width: 100%;
+  }
+}
