--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .header {
   display: flex;
   flex-direction: row;
@@ -21,8 +23,9 @@
 
     .icon {
       height: auto;
-      fill: #444A59;
+      fill: $main-color;
     }
+
     button {
       background: none;
       border: none;
@@ -44,6 +47,7 @@
       width: 17px;
     }
   }
+
   &__wishlist-count {
     position: relative;
     margin-left: 10px;
@@ -65,7 +69,7 @@
   text-align: center;
 
   border-radius: 50%;
-  color: #ffffff;
+  color: $white-color;
   background-color: #358ED7;
 }
 
