--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,31 +1,6 @@
-/* ==========================================================================
-   Fonts
-   ========================================================================== */
+@import "variables";
+@import "fonts";
 
-@font-face{
-  font-family: 'Lato-Bold';
-  src: url('./../fonts/Lato-Bold.ttf') format('ttf');
-}
-
-@font-face{
-  font-family: 'Lato-BoldItalic';
-  src: url('./../fonts/Lato-BoldItalic.ttf') format('ttf');
-}
-
-@font-face{
-  font-family: 'Lato-Italic';
-  src: url('./../fonts/Lato-Italic.ttf') format('ttf');
-}
-
-@font-face{
-  font-family: 'Lato-Regular';
-  src: url('./../fonts/Lato-Regular.ttf') format('ttf');
-}
-
-
-/* ==========================================================================
-   Main Styles
-   ========================================================================== */
 html {
   height: 100%;
 }
@@ -42,10 +17,10 @@ body {
   font-size: 13px;
   text-rendering: optimizeLegibility;
 
-  -moz-osx-font-smoothing: grayscale;  /* Font smoothing tweaks for MacOSx in Gecko */
+  -moz-osx-font-smoothing: grayscale; /* Font smoothing tweaks for MacOSx in Gecko */
   -webkit-font-smoothing: antialiased;
 
-  color: #444A59;
+  color: $main-color;
   background-color: #f8f8f8;
 }
 
@@ -60,9 +35,9 @@ h1, p, figure {
 
 a,
 a:hover,
-a:visited{
+a:visited {
   text-decoration: none;
-  color: #444A59;
+  color: $main-color;
 }
 
 ul, li {
@@ -85,7 +60,7 @@ footer {
   align-items: center;
 
   text-transform: uppercase;
-  background-color: #ffffff;
+  background-color: $white-color;
 }
 
 main {
@@ -103,21 +78,17 @@ main {
 }
 
 
-/* ==========================================================================
-   Buttons
-   ========================================================================== */
-
 .icon {
   width: 20px;
   height: 20px;
-  fill: #d9d9d9;
+  fill: $gray-color;
   transition: .3s fill;
 }
 
 .button {
-  border: 1px solid #d9d9d9;
+  border: 1px solid $gray-color;
   border-radius: 100px;
-  background-color: #ffffff;
+  background-color: $white-color;
 
   cursor: pointer;
   transition: .3s border, .3s color, .3s background-color;
@@ -138,20 +109,20 @@ main {
 }
 
 .button--primary:hover {
-  border: 1px solid #444A59;
-  color: #ffffff;
-  background-color: #444A59;
+  border: 1px solid $main-color;
+  color: $white-color;
+  background-color: $main-color;
 }
 
 .button--wishlist:hover {
-  border: 1px solid #444A59;
+  border: 1px solid $main-color;
 }
 
 .button--wishlist:hover > .icon {
-  fill: #444A59;
+  fill: $main-color;
 }
 
 .button--in-cart {
   pointer-events: none;
-  background-color: #d9d9d9;
+  background-color: $gray-color;
 }
