--- a/src/assets/styles/products-list.scss
+++ b/src/assets/styles/products-list.scss
@@ -1,3 +1,4 @@
+@import "variables";
 
 .product-page {
   position: relative;
@@ -9,6 +10,7 @@
   flex-flow: row wrap;
   margin: 0 -10px;
 }
+
 .loader {
   width: 200px;
   height: 200px;
