--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -70,6 +70,13 @@ main {
   margin: 30px 0 20px;
 }
 
+.main__wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
 .container {
   width: 100%;
   max-width: 1240px;
