--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -70,7 +70,7 @@
 
   border-radius: 50%;
   color: $white-color;
-  background-color: #358ED7;
+  background-color: $blue-color;
 }
 
 @media screen and (max-width: 650px) {
