--- a/src/assets/styles/products-list.scss
+++ b/src/assets/styles/products-list.scss
@@ -19,7 +19,7 @@
   pointer-events: none;
   margin: 30vh auto;
 
-  border: .2em solid #358ED7;
+  border: .2em solid $blue-color;
   border-bottom-color: transparent;
   border-radius: 50%;
   animation: 1s loader linear infinite;
